--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -44,6 +44,7 @@
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "expo-web-browser": "^12.3.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
