--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -15,19 +15,11 @@
   "trustedDependencies": [
     "@sentry/cli"
   ],
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native@~0.74.0",
-        "react-native-reanimated@~3.10.0",
-        "react-native-gesture-handler@~2.16.1",
-        "react-native-screens@~3.31.1"
-      ]
-    }
-  },
+  "expo": {},
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.30",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@formatjs/intl-datetimeformat": "^6.12.3",
     "@formatjs/intl-displaynames": "^6.6.6",
@@ -37,9 +29,10 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@gorhom/bottom-sheet": "^5.0.4",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@sentry/react-native": "~5.24.3",
-    "@shopify/flash-list": "1.6.4",
+    "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@sentry/react-native": "~6.1.0",
+    "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
     "@trpc/client": "next",
@@ -49,48 +42,47 @@
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "ajv": "^8.13.0",
-    "expo": "^51.0.38",
-    "expo-application": "5.9.1",
-    "expo-auth-session": "5.5.2",
-    "expo-clipboard": "6.0.3",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "13.0.2",
-    "expo-dev-client": "~4.0.27",
-    "expo-device": "6.0.2",
-    "expo-font": "~12.0.5",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "13.0.2",
-    "expo-linking": "6.3.1",
-    "expo-location": "17.0.1",
-    "expo-notifications": "~0.28.19",
-    "expo-router": "~3.5.14",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "1.12.1",
-    "expo-updates": "~0.25.12",
-    "expo-web-browser": "13.0.3",
+    "expo": "^52.0.7",
+    "expo-application": "~6.0.1",
+    "expo-auth-session": "~6.0.0",
+    "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.1",
+    "expo-device": "~7.0.1",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.0",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.1",
+    "expo-notifications": "~0.29.8",
+    "expo-router": "~4.0.5",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.10",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.7",
+    "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
     "jotai": "^2.10.0",
     "lodash": "^4.17.21",
     "luxon": "^3.5.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-native": "~0.75.0",
-    "react-native-element-dropdown": "^2.12.0",
-    "react-native-gesture-handler": "~2.18.1",
-    "react-native-maps": "1.14.0",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.10.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.34.0",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "4.5.3",
     "superjson": "^2.2.1"
   },
   "peerDependencies": {
@@ -99,14 +91,14 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/runtime": "^7.23.9",
-    "@expo/config-plugins": "8.0.4",
+    "@expo/config-plugins": "~9.0.0",
     "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "0.1.0",
-    "babel-preset-expo": "11.0.5",
-    "tailwindcss": "3.3.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~12.0.0",
     "eslint-config-universe": "^12.1.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "tailwindcss": "3.3.2"
   }
 }
