--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -8,15 +8,13 @@
     "update-latest": "bun update --latest"
   },
   "dependencies": {
-    "@clerk/backend": "1.1.3",
-    "@googlemaps/google-maps-services-js": "^3.3.36",
-    "@supabase/supabase-js": "^2.33.1",
-    "@vespaiach/axios-fetch-adapter": "^0.3.1",
+    "@clerk/backend": "1.16.3",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@vibefire/models": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "axios": "0.27.2",
-    "fauna": "^2.0.1",
-    "svix": "^1.10.0"
+    "axios": "1.7.7",
+    "fauna": "^2.3.0",
+    "svix": "^1.40.0"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
@@ -27,6 +25,6 @@
     "./clerk": "./src/clerk/index.ts",
     "./svix": "./src/svix/index.ts",
     "./cloudflare-images": "./src/cloudflare-images/index.ts",
-    "./g-maps": "./src/google-maps/index.ts"
+    "./google-maps": "./src/google-maps/index.ts"
   }
 }
