--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -21,15 +21,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
-    "@formatjs/intl-datetimeformat": "^6.12.3",
-    "@formatjs/intl-displaynames": "^6.6.6",
-    "@formatjs/intl-getcanonicallocales": "^2.3.0",
-    "@formatjs/intl-locale": "^3.4.5",
-    "@formatjs/intl-numberformat": "^8.10.1",
-    "@formatjs/intl-pluralrules": "^5.2.12",
-    "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@gorhom/bottom-sheet": "^5.0.4",
-    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@sentry/react-native": "~6.1.0",
     "@shopify/flash-list": "1.7.1",
@@ -42,26 +34,26 @@
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "ajv": "^8.13.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.11",
     "expo-application": "~6.0.1",
     "expo-auth-session": "~6.0.0",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.1",
+    "expo-dev-client": "~5.0.4",
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
-    "expo-image": "~2.0.0",
-    "expo-image-picker": "~16.0.2",
+    "expo-image": "~2.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-location": "~18.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.2",
     "expo-notifications": "~0.29.8",
-    "expo-router": "~4.0.5",
+    "expo-router": "~4.0.9",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.10",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.26.7",
+    "expo-updates": "~0.26.9",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "jotai": "^2.10.0",
@@ -70,7 +62,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -79,7 +71,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
