--- a/apps/app.vibefire.native/eas.json
+++ b/apps/app.vibefire.native/eas.json
@@ -7,7 +7,7 @@
   "build": {
     "base": {
       "node": "20.9.0",
-      "pnpm": "8.6.11",
+      "bun": "1.1.26",
       "env": {
         "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "***REMOVED***",
         "EXPO_PUBLIC_CF_IMAGES_ACC_HASH": "***REMOVED***",
