--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -37,6 +37,7 @@
     "expo": "~52.0.11",
     "expo-application": "~6.0.1",
     "expo-auth-session": "~6.0.0",
+    "expo-camera": "~16.0.10",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
