--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -23,7 +23,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.4",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@sentry/react-native": "~6.1.0",
+    "@sentry/react-native": "~6.3.0",
     "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
@@ -34,27 +34,28 @@
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "ajv": "^8.13.0",
-    "expo": "~52.0.11",
+    "expo": "~52.0.20",
     "expo-application": "~6.0.1",
-    "expo-auth-session": "~6.0.0",
+    "expo-auth-session": "~6.0.1",
     "expo-camera": "~16.0.10",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.4",
+    "expo-dev-client": "~5.0.8",
     "expo-device": "~7.0.1",
-    "expo-font": "~13.0.1",
-    "expo-image": "~2.0.2",
+    "expo-font": "~13.0.2",
+    "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
+    "expo-insights": "~0.8.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-location": "~18.0.2",
-    "expo-notifications": "~0.29.8",
-    "expo-router": "~4.0.9",
+    "expo-location": "~18.0.4",
+    "expo-notifications": "~0.29.11",
+    "expo-router": "~4.0.15",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.13",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.26.9",
+    "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "jotai": "^2.10.0",
@@ -63,7 +64,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -72,7 +73,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
