--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "syncpack": "^13.0.0",
     "ts-jest": "^29.1.1",
     "turbo": "^2.2.3",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "wrangler": "3.99.0"
   }
 }
