--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@vibefire/models": "0.1.0",
     "@vibefire/services": "0.1.0",
-    "@vibefire/utils": "0.1.0",
-    "expo-server-sdk": "^3.10.0"
+    "@vibefire/utils": "0.1.0"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
@@ -20,9 +19,7 @@
   "exports": {
     "./result": "./src/manager-result.ts",
     "./userfacing": "./src/userfacing/index.ts",
-    "./expo": "./src/public/expo-manager.ts",
     "./google-maps": "./src/public/google-maps-manager.ts",
-    "./clerk": "./src/public/clerk-manager.ts",
-    "./vf-notification": "./src/public/vibefire-notification-manager.ts"
+    "./service-facing": "./src/service-facing/index.ts"
   }
 }
