--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -14,7 +14,8 @@
     "@vibefire/utils": "0.1.0",
     "axios": "1.7.8",
     "fauna": "^2.3.0",
-    "svix": "^1.40.0"
+    "svix": "^1.40.0",
+    "expo-server-sdk": "^3.13.0"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
@@ -25,6 +26,7 @@
     "./clerk": "./src/clerk/index.ts",
     "./svix": "./src/svix/index.ts",
     "./cloudflare-images": "./src/cloudflare-images/index.ts",
-    "./google-maps": "./src/google-maps/index.ts"
+    "./google-maps": "./src/google-maps/index.ts",
+    "./expo": "./src/expo/index.ts"
   }
 }
