--- a/services/api.vibefire.app/package.json
+++ b/services/api.vibefire.app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "deploy": "wrangler deploy",
+    "deploy": "wrangler deploy --minify",
     "dev": "wrangler dev --ip 0.0.0.0 --port 8787"
   },
   "dependencies": {
